--- a/backend/news_verification/templates/index.html
+++ b/backend/news_verification/templates/index.html
@@ -125,7 +125,7 @@
                         <img src="static/images/deepseekLogo.png" alt="DeepSeek Logo">
                     </div>
                     <div class="item" style="--position: 2">
-                        <img src="static/images/llaamLogo.png" alt="LLaMA Logo">
+                        <img src="static/images/geminiLogo.png" alt="Gemini Logo">
                     </div>
                     <div class="item" style="--position: 3">
                         <img src="static/images/metaLogo.png" alt="Meta Logo">
@@ -134,7 +134,7 @@
                         <img src="static/images/deepseekLogo.png" alt="DeepSeek Logo">
                     </div>
                     <div class="item" style="--position: 5">
-                        <img src="static/images/llaamLogo.png" alt="LLaMA Logo">
+                        <img src="static/images/llamaLogo.png" alt="Llama Logo" >
                     </div>
                     <div class="item" style="--position: 6">
                         <img src="static/images/metaLogo.png" alt="Meta Logo">
