--- a/backend/news_verification/templates/knowledge_graph.html
+++ b/backend/news_verification/templates/knowledge_graph.html
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="tree">
 				<ul>
-					<li> <a href="#"><img src="images/1.jpg"><span><h1>Inputs</h1></span></a>
+					<li> <a href="#"><img src="https://picsum.photos/200"><span><h1>Inputs</h1></span></a>
 						<ul>
 							{%for input in output["inputs"]%}
 							<li> <a href="#"><img src="https://picsum.photos/200"><span class="clickable-span" data-info="*USER INPUT* {{input}} is {{output["inputs"][input]}} and *EXTRACTED INFORMATION* is {{output["descr"][input]}}">{{input}}</span></a>
